# TAI_Group_6

./: .gitignore  README.md  build-project.sh
example/: chry2.txt  (+4 more)
src/: CMakeLists.txt  cmp.cpp  cmp_gen.cpp  cpm.cpp  cpm_gen.cpp  tmp.cpp
src/cpm/builder/: CopyModelBuilder.cpp  CopyModelBuilder.h
src/cpm/generation/: ModelGenerator.cpp  ModelGenerator.h
src/debugging/: Logger.h
src/generator/abstract/: AbstractGenerator.cpp  AbstractGenerator.h
src/generator/implementation/: PositionalGenerator.cpp  PositionalGenerator.h  ProbabilisticGenerator.cpp  ProbabilisticGenerator.h
src/hitsMisses/: HitsMissesInfo.cpp
src/input/: Input.h  InputUtils.h
src/input/abstract/: AbstractInputArguments.cpp  AbstractInputArguments.h
src/input/classes/: CopyModelInputArguments.cpp  CopyModelInputArguments.h  GeneratorInputArguments.cpp  GeneratorInputArguments.h  InputArguments.cpp  InputArguments.h
src/input/implementation/: CopyModelInputArguments.cpp  CopyModelInputArguments.h  GeneratorInputArguments.cpp  GeneratorInputArguments.h
src/logging/: Logger.cpp  Logger.h
src/modelSerializer/: ModelSerializer.cpp  ModelSerializer.h
src/model_builder/abstract/: AbstractModelBuilder.cpp  AbstractModelBuilder.h
src/model_builder/implementation/: FixedWindowModelBuilder.cpp  (+3 more)
src/reader/: FileInfo.cpp  FileInfo.h  FileReader.cpp  FileReader.h  RandomAccessReader.cpp  RandomAccessReader.h  SequentialFileReader.cpp  SequentialFileReader.h
src/utils/: InputProcessorEntity.cpp  InputProcessorEntity.h  LoggableEntity.cpp  LoggableEntity.h  generalUtils.cpp  generalUtils.h  printUtils.h  readTarget.h  utils.h
(+17 files in other folders)
